# etl_pipeline_new

./: .gitignore  .pipeline_hash  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: dev.yaml  prod.yaml
src/: __init__.py  main.py  simple_main.py
src/analytics/: __init__.py  data_inspector.py  quality_checker.py  reporter.py
src/extractors/: __init__.py  base.py  csv_extractor.py  factory.py  neo4j_extractor.py  s3_extractor.py
src/loaders/: __init__.py  base.py  csv_loader.py  factory.py  neo4j_loader.py  s3_loader.py
src/transformers/: __init__.py  aggregator.py  base.py  data_cleaner.py  factory.py  sql_transformer.py
src/utils/: __init__.py  config.py  idempotency.py  logging.py  persistence.py
tests/: __init__.py  test_analytics.py  test_extractors.py  test_transformers.py
